# scrapy-selenium

./: setup.cfg
scrapy_selenium/: http.py  middlewares.py
