[metadata]
name = scrapy-selenium
version = 0.1.3
url = https://github.com/clemfromspace/scrapy-selenium
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium
long_description = file:README.md
long_description_content_type = text/markdown

[options]
include_package_data = true

[pep8]
max-line-length = 100
